--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             projects<span>( )</span>
           </div>
           <div class="scrollBar_line">
-            <div class="box_project left">
+            <!-- <div class="box_project left">
                <div class="box_left">
                   <img class="repoFoto" src="https://raw.githubusercontent.com/YuraKhalus/fakestore/main/src/img/readme/mainPage.png" alt="Mocap">
                </div>
@@ -227,7 +227,7 @@
 
                   </div>
                </div>
-            </div>
+            </div> -->
       </div>
 
       <div class="companies_wrap">
